Update página de blog

--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Página de blog</h1>
-    <p>Insira seu texto: </p>
+    <p>Post número 1</p>
+    <p>Post número 2</p>
 </body>
 </html>
